Adição paginação de dominio
